# downloads-butler

./: .gitignore  README.md  agent.md  index.html  package-lock.json  package.json
src/: App.test.tsx  App.tsx  styles.css  tauriClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: downloadsButler.test.ts  downloadsButler.ts
src/shared/: classificationRules.json
