[package]
name = "downloads-butler"
version = "0.1.0"
description = "A cautious local desktop organizer for Downloads folders."
authors = ["Downloads Butler"]
edition = "2021"

[lib]
name = "downloads_butler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
